<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fourteenone</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_undolastscore">Undo last score</string>
    <string name="menu_scorecorrection">Score Correction</string>
    <string name="menu_quitgame">Quit Game</string>
    <string name="start_game">Start Game</string>
    <string name="player_1_name">First player\'s name:</string>
    <string name="player_2_name">Second player\'s name:</string>
    <string name="game_target">Game Target:</string>
    <string name="introtext">Please enter the player names and the target you\'re going for, and then start your game!
        Have fun!
    </string>
    <string name="gameActivity">Game</string>
    <string name="possible_run">Possible Run</string>
    <string name="provisional">Provisional</string>
    <string name="button_rerack">RERACK</string>
    <string name="button_noScore">No score</string>
    <string name="button_updateScore">UPDATE SCORE</string>
    <string name="balls_on_table">"Aantal ballen op tafel: "</string>
    <string name="foul">FOUL</string>
    <string name="annuleren">Annuleren</string>
    <string name="ok">OK</string>
    <string name="startnewgame">Start new game</string>
    <string name="highrun">High run:</string>
    <string name="avgrun">Avg run:</string>
    <string name="fouls"># fouls:</string>

</resources>