<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textView_ballsontable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balls_on_table"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="10dp"/>

        <NumberPicker
            android:id="@+id/numberPicker_ballsontable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/button_foul"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/foul"
        android:textColor="#ff0000"
        android:textOff="NO FOUL"
        android:textOn="FOUL"
        android:textSize="50sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/annuleren"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>