<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".GameActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView_targetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_target"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/textView_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33b5e5"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <fragment
            android:id="@+id/scoretablePLayer1"
            android:name="com.rvr.fourteenone.ScoretableFragment"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp" 
            android:layout_marginRight="5dp"/>

        <fragment
            android:id="@+id/scoretablePLayer2"
            android:name="com.rvr.fourteenone.ScoretableFragment"
            android:layout_width="150dp"
            android:layout_height="250dp" 
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/button_Rerack"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/button_rerack"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_PossibleRunText"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/possible_run"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:id="@+id/textView_PossibleRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:textColor="#33b5e5"
	        android:textSize="30sp"
    	    android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_UpdateScore"
        android:text="@string/button_updateScore" 
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:textColor="#33b5e5"
        android:textSize="30sp"
        android:textStyle="bold"/>

</LinearLayout>