<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_NewGameButton"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:background="@drawable/border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_endofgame"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#007399"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/highrun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:textSize="12sp"
            android:textColor="#000000"
            android:gravity="right"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_highrun_p1"
            android:text="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="right"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_highrun_p2"
            android:text="14"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/avgrun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:textSize="12sp"
            android:textColor="#000000"
            android:gravity="right"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_avgrun_p1"
            android:text="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="right"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_avgrun_p2"
            android:text="7"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fouls"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"
            android:textSize="12sp"
            android:textColor="#000000"
            android:gravity="right"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_fouls_p1"
            android:text="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="right"/>

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_fouls_p2"
            android:text="14"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="right"/>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/startnewgame"
        android:id="@+id/button_startnewgame"
        android:layout_margin="10dp"
        android:background="@color/tournamentblue"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:shadowColor="@color/black_overlay"
        android:singleLine="false"
        android:textStyle="bold"/>

</LinearLayout>